* Release 0.6.0
	* Fixed Bug #613310: 'Connections fail with ab test'.
	* Fixed bug #603409: 'The ipc messages get truncated with binary data'.

2010-06-28 Release 0.5.0
	* Fixed bug #591855: 'Compilation needs to be more strict'.
	* Fixed bug #589959: 'gen configure server header_max_size is ignored'.
	* Fixed Bug #589820: 'Change configuration files to json'.
	* Fixed Bug #584748: 'Move from Tornado to Dornado'.
	* Fixed Bug #584807: 'Regex makes startup and requests extremely slow'.
	* Fixed Bug #594439: 'escape_value and unescape_value are slow'.
	* Fixed Bug #585528: 'Move the server and app to separate processes'.
	* Fixed Bug #597053: 'Failed builds should show in the browser'.
	* Fixed Bug #590977: 'Server is always old version RootinTootin_0.1'.
	* Fixed Bug #597049: '404 pages do not show in Chrome'.
	* Fixed Bug #586631: 'Rebuilding is too slow'.
	* Fixed Bug #598700: 'The server needs to show unhandled exceptions'.
	* Fixed Bug #598609: 'Large responses break the server'.
	* Fixed Bug #598615: 'Application console output should show on the server'.
	* Fixed Bug #584744: 'ppa does not work on ubuntu 10.04'.

2010-03-02 Release 0.4.0
	* Fixed bug #511025: 'Controller template uses wrong view on create fail'.
	* Fixed bug #509711: 'Decimal datatype has zero precision'.
	* Fixed bug #509707: 'Decimal database type mapped to D double'.
	* Fixed bug #514143: 'Annoying obsolete FIXME in the routes'.
	* Fixed bug #513483: 'routes use zero-or-more instead of one-or-more'.
	* Fixed bug #510452: 'Requests for files do not show in server output'.
	* Fixed bug #510450: 'The unknown controller 404 page uses the wrong content type'.
	* Fixed bug #511027: 'Validation is missing in generated crud'.
	* Fixed bug #510488: 'html is dropped on create and update'.

2010-01-19  Release 0.3.0
	* Actions can be rendered in html, json, or xml.
	* Routes are more RESTful and use regular expressions.
	* Models can be converted to json and xml via their to_json & to_xml methods.