@@ -9,8 +9,8 @@
 		<script src="/main.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<p style="border: 1px solid black; background-color: #ffaa00; padding: 10px; width: 400px;">
-			For now, this example only works with text files.
+		<p style="border: 1px solid black; background-color: #33ff33; padding: 10px; width: 400px;">
+			This is a basic example that shows how file uploading works.
 		</p>
 		<p id="flash_error"><%=controller.flash_error%></p>
 		<p id="flash_notice"><%=controller.flash_notice%></p>
